--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
+<!-- Aframeを利用してa-boxを表示させるデモコンテンツを作成したい。
+解説はせずに、コビペで使えるソースコードを用意してください。
+htmlに全てを埋め込む形をとってください -->
 
+<!doctype html>
+<html lang="ja">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>A-Frame a-box Demo</title>
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <style>
+      html, body { margin: 0; height: 100%; background: #000; }
+    </style>
+  </head>
+  <body>
+    <a-scene
+      embedded
+      renderer="antialias: true; colorManagement: true;"
+      vr-mode-ui="enabled: true"
+    >
+      <!-- Camera -->
+      <a-entity position="0 1.6 0">
+        <a-camera wasd-controls="acceleration: 25" look-controls="pointerLockEnabled: true"></a-camera>
+      </a-entity>
+
+      <!-- Lights -->
+      <a-entity light="type: ambient; intensity: 0.6"></a-entity>
+      <a-entity light="type: directional; intensity: 0.8" position="1 2 1"></a-entity>
+
+      <!-- Ground -->
+      <a-plane
+        position="0 0 -8"
+        rotation="-90 0 0"
+        width="20"
+        height="20"
+        color="#1b1b1b"
+        material="roughness: 0.9; metalness: 0.0"
+      ></a-plane>
+
+      <!-- Box -->
+      <a-box
+        position="0 1.2 -4"
+        rotation="0 45 0"
+        width="1"
+        height="1"
+        depth="1"
+        color="#4CC3D9"
+        material="roughness: 0.35; metalness: 0.1"
+        animation="property: rotation; to: 0 405 0; loop: true; dur: 6000; easing: linear"
+        shadow="cast: true"
+      ></a-box>
+
+      <!-- Backdrop elements -->
+      <a-sky color="#0a0a14"></a-sky>
+
+      <!-- Shadows (optional, supported by renderer) -->
+      <a-entity shadow="type: pcfsoft"></a-entity>
+    </a-scene>
+  </body>
+</html>
