--- a/index.html
+++ b/index.html
@@ -2,60 +2,78 @@
 解説はせずに、コビペで使えるソースコードを用意してください。
 htmlに全てを埋め込む形をとってください -->
 
+
+<!-- 現在のhtmlを使ってar.jsでhiroマーカーを活用したデモコンテンツに変更したい。
+先ほどと同じルールで生成してください。 -->
+
+
 <!doctype html>
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>A-Frame a-box Demo</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <title>A-Frame + AR.js (Hiro Marker) Demo</title>
+
+    <!-- A-Frame -->
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <!-- AR.js for A-Frame -->
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.5/aframe/build/aframe-ar.js"></script>
+
     <style>
-      html, body { margin: 0; height: 100%; background: #000; }
+      html, body { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: #000; }
+      .hint {
+        position: fixed;
+        left: 10px;
+        bottom: 10px;
+        z-index: 9999;
+        color: #fff;
+        font-family: system-ui, -apple-system, Segoe UI, Roboto, "Noto Sans JP", sans-serif;
+        font-size: 12px;
+        background: rgba(0,0,0,.45);
+        padding: 8px 10px;
+        border-radius: 10px;
+        user-select: none;
+      }
     </style>
   </head>
+
   <body>
+    <div class="hint">Hiroマーカーをカメラに映すとボックスが表示されます</div>
+
     <a-scene
       embedded
-      renderer="antialias: true; colorManagement: true;"
-      vr-mode-ui="enabled: true"
+      vr-mode-ui="enabled: false"
+      renderer="antialias: true; colorManagement: true; precision: mediump;"
+      arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: false;"
     >
+      <a-entity light="type: ambient; intensity: 0.65"></a-entity>
+      <a-entity light="type: directional; intensity: 0.9" position="1 2 1"></a-entity>
+
+      <!-- Hiro marker -->
+      <a-marker preset="hiro">
+        <a-box
+          position="0 0.5 0"
+          rotation="0 45 0"
+          width="1"
+          height="1"
+          depth="1"
+          color="#4CC3D9"
+          material="roughness: 0.35; metalness: 0.1"
+          animation="property: rotation; to: 0 405 0; loop: true; dur: 6000; easing: linear"
+        ></a-box>
+
+        <a-plane
+          position="0 0 0"
+          rotation="-90 0 0"
+          width="2"
+          height="2"
+          color="#1b1b1b"
+          material="roughness: 0.95; metalness: 0.0; opacity: 0.6; transparent: true;"
+        ></a-plane>
+      </a-marker>
+
       <!-- Camera -->
-      <a-entity position="0 1.6 0">
-        <a-camera wasd-controls="acceleration: 25" look-controls="pointerLockEnabled: true"></a-camera>
-      </a-entity>
-
-      <!-- Lights -->
-      <a-entity light="type: ambient; intensity: 0.6"></a-entity>
-      <a-entity light="type: directional; intensity: 0.8" position="1 2 1"></a-entity>
-
-      <!-- Ground -->
-      <a-plane
-        position="0 0 -8"
-        rotation="-90 0 0"
-        width="20"
-        height="20"
-        color="#1b1b1b"
-        material="roughness: 0.9; metalness: 0.0"
-      ></a-plane>
-
-      <!-- Box -->
-      <a-box
-        position="0 1.2 -4"
-        rotation="0 45 0"
-        width="1"
-        height="1"
-        depth="1"
-        color="#4CC3D9"
-        material="roughness: 0.35; metalness: 0.1"
-        animation="property: rotation; to: 0 405 0; loop: true; dur: 6000; easing: linear"
-        shadow="cast: true"
-      ></a-box>
-
-      <!-- Backdrop elements -->
-      <a-sky color="#0a0a14"></a-sky>
-
-      <!-- Shadows (optional, supported by renderer) -->
-      <a-entity shadow="type: pcfsoft"></a-entity>
+      <a-entity camera></a-entity>
     </a-scene>
   </body>
 </html>
